# project-ult-audit-eval

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/frontend-api/: backtests.json
artifacts/frontend-api/audit/: CYCLE_20260424.json
artifacts/frontend-api/backtests/: BT_API4A_001.json
artifacts/frontend-api/replay/: CYCLE_20260424.json
docs/: PROGRESS.md  TASK_BREAKDOWN.md  audit-eval.project-doc.md  spike-replay-notes.md
scripts/: __init__.py  real_cycle_replay_smoke.py  spike_replay.py
src/audit_eval/: __init__.py  _boundary.py  public.py
src/audit_eval/audit/: __init__.py  errors.py  lite.py  manifest_gateway.py  query.py  real_cycle.py  replay.py  replay_view.py  storage.py  writer.py
src/audit_eval/backtest/: __init__.py  alphalens_adapter.py  errors.py  job.py  pit_checker.py  runner.py  schema.py  storage.py  writer.py
src/audit_eval/contracts/: __init__.py  audit_record.py  backtest_result.py  common.py  drift_report.py  manifest_draft.py  replay_draft.py  replay_record.py  retrospective.py  write_bundle.py
src/audit_eval/drift/: __init__.py  rules.py  runner.py  schema.py  storage.py
src/audit_eval/retro/: __init__.py  alert.py  backfill.py  compute.py  dates.py  hook.py  horizon.py  schema.py  storage.py  summary.py
src/audit_eval/ui/: __init__.py
src/audit_eval_fixtures/: __init__.py  _impl.py  _models.py
tests/: __init__.py  conftest.py  test_alphalens_adapter.py  test_audit_writer.py  test_backtest_runner.py  test_backtest_schema.py  test_boundary.py  test_canonical_id_format_consistency.py  test_contracts_audit_record.py  test_contracts_replay_record.py  test_contracts_retrospective.py  test_contracts_write_bundle.py  test_drift_boundary.py  test_drift_rules.py  test_drift_runner.py  test_package_boundary.py  test_pit_checker.py  test_real_cycle_binding.py  test_replay_query.py  test_replay_storage_integration.py  test_retro_alert.py  test_retro_backfill.py  test_retro_compute.py  test_retro_hook.py  test_retro_multi_horizon.py  test_retro_summary.py  test_spike_replay.py  test_tushare_cases_loadable.py
tests/boundary/: test_public_does_not_write_forbidden.py
tests/contract/: test_frontend_api_artifacts.py
tests/fixtures/audit_writer/: sample_bundle.json
tests/fixtures/retro/summary/: alert_cases.json  summary_evaluations.json
tests/fixtures/retro/t_plus_1/: market_outcomes.json  write_bundle.json
tests/smoke/: test_public_smoke.py
tests/unit/: test_audit_eval_fixtures.py  test_public_entrypoints.py
(+43 files in other folders)
